--- a/Client/src/Client.Components/_Imports.razor
+++ b/Client/src/Client.Components/_Imports.razor
@@ -7,6 +7,7 @@
 @using SunRaysMarket.Client.Application.Models
 @using SunRaysMarket.Client.Components.Modals
 @using SunRaysMarket.Client.Components.Stores
+@using SunRaysMarket.Libraries.Components
 @using SunRaysMarket.Shared.Core.DomainModels
 @using SunRaysMarket.Shared.Core.DomainModels.Responses
 @using SunRaysMarket.Shared.Core.Enums
