--- a/Server/src/Server.Web/Components/App.razor
+++ b/Server/src/Server.Web/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"/>
     <link rel="stylesheet" href="css/dev/main.css"/>
+    <link href="Server.Web.styles.css" rel="stylesheet">
     <script src="js/components.js"></script>
     <HeadOutlet/>
 </head>
