--- a/Client/src/Client.Components/Checkout/CheckoutSection.razor
+++ b/Client/src/Client.Components/Checkout/CheckoutSection.razor
@@ -1,4 +1,5 @@
 @namespace SunRaysMarket.Client.Components
+@inherits ApiComponentBase
 @rendermode InteractiveAuto
 
 @if (ShowSection)
@@ -13,9 +14,10 @@
 
     var sectionClasses = string.Join(" ", ["checkout-section", statusClass]).Trim();
 
+
     <div class="@sectionClasses">
         <h3 class="checkout-section__heading">@Heading</h3>
-        @if (ActionButton is not null)
+        @if (ActionButton is not null && ComponentUiState is UiState.Loaded)
         {
             <button class="checkout-section__action-btn" @onclick="HandleActionBtnClick">
                 <span>@ActionButton</span>
@@ -25,19 +27,41 @@
             </button>
         }
         <div class="checkout-section__content">
-            @ChildContent
+
+            @switch (ComponentUiState)
+            {
+                case UiState.Loading:
+                    @LoadingContent
+                    break;
+                case UiState.Loaded:
+                    @ChildContent
+                    break;
+                case UiState.Error:
+                    @ErrorContent
+                    break;
+                default:
+                    throw new ArgumentOutOfRangeException();
+            }
         </div>
     </div>
 }
 
 @code {
+
+    private RenderFragment _defaultLoadingContent = builder =>
+    {
+        builder.OpenComponent<RingSpinner>(1);
+        builder.AddComponentParameter(2, nameof(RingSpinner.ColorProperty), "#80a7d9");
+        builder.AddComponentParameter(3, nameof(RingSpinner.SizeProperty), "5rem");
+        builder.CloseComponent();
+    };
+
+    [Parameter] public override UiState ComponentUiState { get; set; } = UiState.Loaded;
     [Parameter] public RenderFragment? Heading { get; set; }
     [Parameter] public RenderFragment? ActionButton { get; set; }
     [Parameter] public bool ShowSection { get; set; } = true;
     [Parameter] public CheckoutSectionStatus Status { get; set; } = CheckoutSectionStatus.Unset;
     [Parameter] public EventCallback OnActionButtonClicked { get; set; }
-    [Parameter] public RenderFragment? ChildContent { get; set; }
-
 
     private async Task HandleActionBtnClick()
     {
@@ -47,6 +71,7 @@
 
     protected override void OnInitialized()
     {
+        LoadingContent = _defaultLoadingContent;
     }
 
 }
