Added size options to cart controls component.

--- a/Server/src/Server.Web/Components/Pages/ProductDetails.razor
+++ b/Server/src/Server.Web/Components/Pages/ProductDetails.razor
@@ -24,7 +24,9 @@
 
                 <CartControls CssClasses="product-details__cart-controls"
                               ProductId="@Product.Id"
-                              CartItemInfo="@CartItemInfo"/>
+                              CartItemInfo="@CartItemInfo"
+                              Size="CartControls.ControlsSize.Large"
+                              />
             </div>
         }
         else
