Make shopping cart page interactive.

--- a/Client/src/Client.Components/_Imports.razor
+++ b/Client/src/Client.Components/_Imports.razor
@@ -8,6 +8,7 @@
 @using SunRaysMarket.Client.Components.Modals
 @using SunRaysMarket.Client.Components.Stores
 @using SunRaysMarket.Libraries.Components
+@using SunRaysMarket.Libraries.Components.State
 @using SunRaysMarket.Shared.Core.DomainModels
 @using SunRaysMarket.Shared.Core.DomainModels.Responses
 @using SunRaysMarket.Shared.Core.Enums
