--- a/Server/src/Server.Web/Components/_Imports.razor
+++ b/Server/src/Server.Web/Components/_Imports.razor
@@ -8,10 +8,15 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using SunRaysMarket.Client.Components
+@using SunRaysMarket.Libraries.Components
+@using SunRaysMarket.Libraries.Components.State
 @using SunRaysMarket.Server.Application.Services
 @using SunRaysMarket.Server.Components
 @using SunRaysMarket.Server.Web.Components.Layout
 @using SunRaysMarket.Server.Web.Components.Error
+@using SunRaysMarket.Shared.Components
+@using SunRaysMarket.Shared.Components.Enums
+@using SunRaysMarket.Shared.Components.Enums.Mappings
 @using SunRaysMarket.Shared.Core.DomainModels
 @using SunRaysMarket.Shared.Services.Interfaces
 @using SunRaysMarket.Server.Application.UnitOfWork
