--- a/Client/src/Client.Web/_Imports.razor
+++ b/Client/src/Client.Web/_Imports.razor
@@ -3,7 +3,14 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using Client.Web
+@using SunRaysMarket.Client.Components
+@using SunRaysMarket.Client.Web
+@using SunRaysMarket.Libraries.Components
+@using SunRaysMarket.Libraries.Components.State
+@using SunRaysMarket.Shared.Components
+@using SunRaysMarket.Shared.Components.Enums
+@using SunRaysMarket.Shared.Components.Enums.Mappings
