--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -251,7 +251,6 @@ body {
   font-weight: 300;
   color: #f5f5f5;
   border: none;
-  padding: 0 1rem;
   text-align: center;
   appearance: textfield;
   background-color: transparent;
@@ -260,16 +259,18 @@ body {
   outline: none;
 }
 .quantity--sm button svg {
-  width: 1.4rem;
+  width: 1.2rem;
 }
 .quantity--sm input {
-  width: 4.8rem;
-  font-size: 1.8rem;
+  padding: 0 0.4rem;
+  width: 2.4rem;
+  font-size: 1.2rem;
 }
 .quantity--md button svg {
   width: 1.6rem;
 }
 .quantity--md input {
+  padding: 0 0.8rem;
   width: 4rem;
   font-size: 1.6rem;
 }
@@ -277,8 +278,9 @@ body {
   width: 1.8rem;
 }
 .quantity--lg input {
-  width: 3.2rem;
-  font-size: 1.4rem;
+  padding: 0 1.6rem;
+  width: 4.8rem;
+  font-size: 1.8rem;
 }
 
 .btn, .btn:link, .btn:visited {
@@ -324,6 +326,16 @@ body {
 }
 .btn--primary:active {
   background-color: #3e5876;
+}
+.btn--danger {
+  background-color: #cc3300;
+  color: #fff;
+}
+.btn--danger:hover {
+  background-color: #ff4000;
+}
+.btn--danger:active {
+  bottom: #ff6633;
 }
 .btn--pill {
   border-radius: 10rem;
@@ -673,7 +685,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 40rem;
   column-gap: 20rem;
-  grid-template-rows: min-content min-content 1fr;
+  grid-template-rows: repeat(3, min-content) 1fr;
   row-gap: 4rem;
   height: 100%;
   margin: 6.4rem 0;
@@ -689,7 +701,7 @@ body {
 
 .cart-item-display {
   grid-column: 1/2;
-  grid-row: 2/-1;
+  grid-row: 2/4;
   display: flex;
   flex-direction: column;
   gap: 3.2rem;
@@ -737,11 +749,17 @@ body {
 
 .cart-btn {
   grid-column: 2/-1;
-  grid-row: 3/-1;
+  grid-row: 3/4;
   align-self: start;
   justify-self: start;
 }
 
+.cart-page-controls {
+  grid-column: 1/2;
+  grid-row: 4/-1;
+  align-self: start;
+  display: flex;
+}
 .store-dropdown {
   position: relative;
 }
