--- a/styles/scss/components/_shopping-cart.scss
+++ b/styles/scss/components/_shopping-cart.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns:  1fr 40rem;
   column-gap: var.$spacing-8xl;
-  grid-template-rows:  min-content min-content 1fr;
+  grid-template-rows:  repeat(3, min-content) 1fr;
   row-gap: var.$spacing-xl;
   height: 100%;
 
@@ -23,7 +23,7 @@
 
 .cart-item-display {
   grid-column: 1 / 2;
-  grid-row:  2 / -1;
+  grid-row:  2 / 4;
 
   display: flex;
   flex-direction: column;
@@ -83,8 +83,20 @@
 
 .cart-btn {
   grid-column: 2 / -1;
-  grid-row: 3 / -1;
+  grid-row: 3 / 4;
   align-self: start;
   justify-self: start;
 
+}
+
+.cart-page-controls {
+  grid-column: 1 / 2;
+  grid-row: 4 / -1;
+  align-self: start;
+  
+  display: flex;
+  
+  &__empty-btn {
+    
+  }
 }
