Fixed broken admin pages

--- a/Server/src/Server.Web/Components/Layout/AdminLayout.razor
+++ b/Server/src/Server.Web/Components/Layout/AdminLayout.razor
@@ -42,7 +42,7 @@
         </PageLayout>
     </Authorized>
     <NotAuthorized>
-        <p>Not authorized</p>
+        <AutoNavigator Route="/admin/login" ForceLoad="true" />
     </NotAuthorized>
 </AuthorizeView>
 
