--- a/Server/src/Server.Web/Components/Layout/MainLayout.razor
+++ b/Server/src/Server.Web/Components/Layout/MainLayout.razor
@@ -2,29 +2,30 @@
 @using SunRaysMarket.Client.Components.Modals
 
 @inherits LayoutComponentBase
+<div data-enhance-nav="false">
+    <PageLayout LayoutType="LayoutType.Application" Element="div" xmlns="http://www.w3.org/1999/html">
+        <div class="topbar">
+            <div class="topbar__content">
+                <NavLink href="/" class="topbar__brand">
+                    <img src="img/logo.png" alt="Sun Rays Market Logo"/>
+                </NavLink>
 
-<PageLayout LayoutType="LayoutType.Application" Element="div" xmlns="http://www.w3.org/1999/html">
-    <div class="topbar">
-        <div class="topbar__content">
-            <NavLink href="/" class="topbar__brand">
-                <img src="img/logo.png" alt="Sun Rays Market Logo"/>
-            </NavLink>
-
-            <ProductSearch />
-            <TopBarNav />
+                <ProductSearch/>
+                <TopBarNav/>
+            </div>
         </div>
-    </div>
-    <nav class="nav">
-        <div class="nav__content">
-            <NavToggle />
-            <NavMenu/>
-            <NavAccount/>
-        </div>
-    </nav>
-    <PageLayout LayoutType="LayoutType.Page">
-        @Body
-        <MainFooter />
+        <nav class="nav">
+            <div class="nav__content">
+                <NavToggle/>
+                <NavMenu/>
+                <NavAccount/>
+            </div>
+        </nav>
+        <PageLayout LayoutType="LayoutType.Page">
+            @Body
+            <MainFooter/>
+        </PageLayout>
     </PageLayout>
-</PageLayout>
 
-<Modal />
+    <Modal/>
+</div>
