--- a/Server/src/Server.Web/Components/Pages/Admin/ProductTypeActions.razor
+++ b/Server/src/Server.Web/Components/Pages/Admin/ProductTypeActions.razor
@@ -3,7 +3,12 @@
 
 <SectionContent SectionName="page-title">@PageTitle</SectionContent>
 
-<EditForm Model="ProductType" class="form--admin" method="post" OnValidSubmit="OnValidSubmitAsync">
+<EditForm
+    Model="ProductType"
+    class="form--admin"
+    method="post"
+    OnValidSubmit="OnValidSubmitAsync"
+    FormName="ProductTypeActionForm">
     <div class="form__admin-group">
         <div>
             <InputText class="form__input"
@@ -46,12 +51,12 @@
     [Inject] private NavigationManager Navigation { get; set; } = default!;
     private IUnitOfWork? UnitOfWork { get; set; }
 
-    private CreateProductTypeModel ProductType { get; set; } = new();
+    [SupplyParameterFromForm] private CreateProductTypeModel ProductType { get; set; } = new();
     private IEnumerable<DepartmentListModel> Departments { get; set; } = new DepartmentListModel[] { };
 
     private string ActionName { get; set; } = string.Empty;
     private string PageTitle => $"{ActionName} Product Type";
-    
+
     protected override async Task OnInitializedAsync()
     {
         UnitOfWork = ScopedServices.GetRequiredService<IUnitOfWork>();
@@ -76,13 +81,12 @@
 
     private async Task OnValidSubmitAsync()
     {
-        var navigationManager = ScopedServices.GetRequiredService<NavigationManager>();
 
-        if (Id.HasValue)
+        if (!Id.HasValue)
         {
             await AddProductTypeAsync();
 
-            navigationManager.NavigateTo("/admin/products");
+           Navigation.NavigateTo("/admin/product-types");
         }
         else
         {
