--- a/Client/src/Client.Components/_Imports.razor
+++ b/Client/src/Client.Components/_Imports.razor
@@ -1,5 +1,6 @@
-﻿@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Forms
+﻿@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.Extensions.DependencyInjection
 @using Microsoft.Extensions.Logging
