--- a/Client/src/Client.Components/Checkout/FulfilmentSection.razor
+++ b/Client/src/Client.Components/Checkout/FulfilmentSection.razor
@@ -90,7 +90,7 @@
     private TimeSlotModel? _timeSlotModel;
 
 #nullable disable
-    [Inject] IAddressService AddressService { get; set; }
+    [Inject] private IAddressService AddressService { get; set; }
     [Inject] private ICheckoutService CheckoutService { get; set; }
     [Inject] private IModalController ModalController { get; set; }
     [Inject] private IStore Store { get; set; }
@@ -128,6 +128,8 @@
         Model = await Store!.TryGetValueAsync<FulfillmentModel.DeliveryModel>("FulfillmentData")
                 ?? await Store!.TryGetValueAsync<FulfillmentModel.PickupModel>("FulfillmentData")
                 ?? Model;
+        
+        
 
         if (Model is FulfillmentModel.NonEmptyModel { IsValid: true } nonEmptyModel)
         {
