--- a/Client/src/Client.Components/Checkout/CheckoutContent.razor
+++ b/Client/src/Client.Components/Checkout/CheckoutContent.razor
@@ -2,11 +2,12 @@
 @using System.Runtime.InteropServices
 @using SunRaysMarket.Client.Components.Checkout
 @using SunRaysMarket.Libraries.Components.State
+@using SunRaysMarket.Shared.Core.Checkout
 @using SunRaysMarket.Shared.Core.DomainModels.Checkout
 @using SunRaysMarket.Shared.Core.Structs
 
 @namespace SunRaysMarket.Client.Components
-@rendermode InteractiveAuto
+@rendermode InteractiveWebAssembly
 
 <DisplayByUiState State="@_uiState">
     <UiLoading>
@@ -62,6 +63,7 @@
 #nullable disable
     [Inject] private ILogger<CheckoutContent> Logger { get; set; }
     [Inject] private ICheckoutService CheckoutService { get; set; }
+    [Inject] NavigationManager Navigation { get; set; }
     [Inject] private IServiceProvider ServiceProvider { get; set; }
 #nullable enable
 
@@ -70,22 +72,24 @@
     private CheckoutModel Model { get; set; } = new();
     private PaymentSection.PaymentMethodModel? PaymentModel { get; set; }
     private CheckoutCostSummary CostSummary { get; set; } = default!;
-
+    private IStore? Store { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        var store = ServiceProvider.GetService<IStore>();
-        if (store is null) return;
+        Store = ServiceProvider.GetService<IStore>();
 
-        PaymentModel = await store.TryGetValueAsync<PaymentSection.PaymentMethodModel>("PaymentInfo")
+        if (Store is null)
+            return;
+
+        PaymentModel = await Store.TryGetValueAsync<PaymentSection.PaymentMethodModel>("PaymentInfo")
                        ?? new PaymentSection.PaymentMethodModel();
         Model.PaymentMethodId = PaymentModel.PaymentMethodId;
-        Model.FulfillmentInfo = await store.TryGetValueAsync<FulfillmentModel.DeliveryModel>("FulfillmentData")
-                                ?? await store.TryGetValueAsync<FulfillmentModel.PickupModel>("FulfillmentData")
+        Model.FulfillmentInfo = await Store.TryGetValueAsync<FulfillmentModel.DeliveryModel>("FulfillmentData")
+                                ?? await Store.TryGetValueAsync<FulfillmentModel.PickupModel>("FulfillmentData")
                                     as FulfillmentModel
                                 ?? new FulfillmentModel.EmptyModel();
-        Model.ContactNumber = await store.TryGetValueAsync<string>("ContactNumber");
-        Model.DeliveryInstructions = await store.TryGetValueAsync<string>("DeliveryInstructions");
+        Model.ContactNumber = await Store.TryGetValueAsync<string>("ContactNumber") ?? string.Empty;
+        Model.DeliveryInstructions = await Store.TryGetValueAsync<string>("DeliveryInstructions");
 
         CostSummary = new CheckoutCostSummary { ItemTotal = Summary.TotalPrice };
 
@@ -99,13 +103,37 @@
         {
             if (Model.ToSubmitModel() is CheckoutSubmitModel.ValidModel validSubmitModel)
             {
-                await CheckoutService.CheckoutAsync(validSubmitModel);
+                var response = await CheckoutService.CheckoutAsync(validSubmitModel);
+                await HandleResponseAsync(response);
             }
         }
-        catch
+        catch (Exception e)
         {
-            Logger.LogError("An error occured while the user was trying to checkout.");
+            Logger.LogError("An error occured while the user was trying to checkout:\n  {}", e.Message);
         }
+    }
+
+    private async Task HandleResponseAsync(CheckoutResponse response)
+    {
+        switch (response)
+        {
+            case CheckoutResponse.Success successfulResponse:
+                await DeleteStoredData();
+                Navigation.NavigateTo("/");
+                break;
+            case CheckoutResponse.Warning:
+                break;
+            case CheckoutResponse.Failure failureResponse:
+                break;
+        }
+    }
+
+    private async Task DeleteStoredData()
+    {
+        await Store!.RemoveValueAsync("PaymentInfo");
+        await Store.RemoveValueAsync("FulfillmentData");
+        await Store.RemoveValueAsync("ContactNumber");
+        await Store.RemoveValueAsync("DeliveryInstructions");
     }
 
     public record CheckoutCostSummary
